--- a/package.json
+++ b/package.json
@@ -17,12 +17,14 @@
   "license": "ISC",
   "description": "A cold email application using Express and Nodemailer",
   "dependencies": {
+    "@google/generative-ai": "^0.24.1",
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "ejs": "^3.1.9",
     "express": "^4.18.2",
     "googleapis": "^164.1.0",
+    "import": "^0.0.6",
     "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.9.7"
   }
