--- a/.github/workflows/deploy-backend.yml
+++ b/.github/workflows/deploy-backend.yml
@@ -25,7 +25,7 @@ jobs:
         run: |
           ssh -i ~/.ssh/id_rsa ${{ secrets.EC2_USER }}@${{ secrets.EC2_HOST }} << 'EOF'
             cd ${{ secrets.APP_PATH }}
-            git pull origin main
+            git pull origin master
             npm install
-            pm2 restart backend
+            pm2 restart coldr-backend
           EOF
