--- a/.github/workflows/deploy-backend.yml
+++ b/.github/workflows/deploy-backend.yml
@@ -27,5 +27,5 @@ jobs:
             cd ${{ secrets.APP_PATH }}
             git pull origin master
             npm install
-            pm2 restart coldr-backend
+            pm2 restart coldr-backend --update-env
           EOF
